--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/main.css" />
+    <title>ORKUT</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="fields">
+        <div class="fields__title">
+          <p id="field__title">Acesse o ORKUT com a sua conta Google!</p>
+        </div>
+        <div class="fields__textboxs">
+          <input
+            type="email"
+            placeholder="Digite o seu e-mail"
+            name=""
+            id="field__email"
+          />
+          <input type="password" placeholder="Senha" name="" id="field__pass" />
+        </div>
+        <div class="fields__remember">
+          <input type="checkbox" name="" id="field__remember" />
+          <label for="field__remember">Lembrar sempre do meu acesso</label>
+        </div>
+        <div class="fields__buttons">
+          <button id="btnlogin">ENTRAR</button>
+        </div>
+        <div class="fields__recovery">
+          <a href="#">Esqueci senha ou e-mail</a>
+        </div>
+        <div class="fields__create">
+          <a href="#">Não tem conta ? Criar agora </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
