--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/reset.css" />
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/login.css" />
+    <link rel="stylesheet" href="./style/login-responsive.css" />
     <title>ORKUT</title>
   </head>
   <body>
+    <div class="logo">
+      <img src="./img/2560px-Logo_ORKUT.svg.png" alt="" />
+    </div>
+
     <div class="container">
       <div class="fields">
         <div class="fields__title">
-          <p id="field__title">Acesse o ORKUT com a sua conta Google!</p>
+          <p id="field__title">
+            Acesse o <span class="pink-font">orkut</span> com a sua conta
+            <span style="color: #4187ee">G</span
+            ><span style="color: #df3f31">o</span
+            ><span style="color: #f9bc00">o</span
+            ><span style="color: #4080fc">g</span
+            ><span style="color: #32a74e">l</span
+            ><span style="color: #ea4435">e</span> !
+          </p>
         </div>
         <div class="fields__textboxs">
           <input
@@ -34,7 +47,9 @@
           <a href="#">Esqueci senha ou e-mail</a>
         </div>
         <div class="fields__create">
-          <a href="#">Não tem conta ? Criar agora </a>
+          <a href="#"
+            >Não tem conta ? <span class="pink-font">Criar agora</span>
+          </a>
         </div>
       </div>
     </div>
